[package]
name = "ckeditor-bot"
version = "0.1.0"
authors = ["m4yestiK <oxygamerz64@gmail.com>"]
edition = "2021"
description = "Bypass CKEditor copy-paste blocker using Enigo + DeviceQuery"
repository = "https://github.com/xm4yestiK/ckeditor-bot"
license = "MIT"
readme = "README.md"
keywords = ["ckeditor", "automation", "bot", "rust"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1"
colored = "2"
device_query = "1"
enigo = "0.1"
figlet-rs = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = { version = "0.2", optional = true }
windows-sys = { version = "0.48", optional = true }
rand = "0.9.2"
rdev = "0.5.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Console"] }



[build-dependencies]
winres = "0.1.12" 
